# toastbot

./: README.md  platformio.ini
Arduino/: colour_sense_6shades.ino  colour_sense_test.ino
Controls/: toastbot_algo.py
M5Dial/: CMakeLists.txt  ui.c  ui.h  ui_Screen1.c  ui_img_1819508605.c  ui_img_762081401.c  ui_img_orange_white_bold_coffee_and_toast_logo_png.c
M5Dial/M5Dial/: M5Dial.ino
M5Dial/UI/: ui.h
UI/M5DIal/: M5Dial.ino  filelist.txt  ui.h  ui_helpers.c  ui_helpers.h  ui_img_1135424454.c  ui_img_1475470140.c  ui_img_1709373061.c  ui_img_77997250.c  ui_img_square_png.c
UI/M5DIal/UI/: ui.c  ui.h  ui_Screen1.c
src/: main.cpp
