SET(SOURCES ui_Screen1.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_img_orange_white_bold_coffee_and_toast_logo_png.c
    ui_img_square_png.c
    ui_img_77997250.c
    ui_img_1819508605.c
    ui_img_1475470140.c
    ui_img_1709373061.c
    ui_img_1135424454.c
    ui_img_762081401.c)

add_library(ui ${SOURCES})
